# mtrack

./: CMakeLists.txt  README.md  tasks.org
src/: CMakeLists.txt  Makefile  entry.cpp  entry.h  filter.cpp  filter.h  main.cpp  mtrack  mtrack.pro  tracker.cpp  tracker.h  window.cpp  window.h
